[direct-io-cassandra] Upgrade CQL client